[project]\nname = "joeclaude"\nversion = "0.1.0"\ndescription = "Your latest secret claude - AI-powered analytics platform"\nreadme = "README.md"\nlicense = {text = "MIT"}\nrequires-python = ">=3.10"\nauthors = [\n    {name = "Joenasriani"}\n]\n\n[tool.pytest.ini_options]\nminversion = "7.0"\naddopts = "-ra -q --strict-markers --tb=short --cov=api --cov=analytics --cov-report=term-missing"\ntestpaths = ["tests"]\npython_files = "test_*.py"\npython_classes = "Test*"\npython_functions = "test_*"\nmarkers = [\n    "slow: marks tests as slow (deselect with '-m \"not slow\"')",\n    "integration: mark as integration test requiring API keys",\n]\nasyn...